# webapp_boilerplate

./: .gitignore  Cargo.toml  Config_template.toml  README.md  Rocket.toml  log4rs.yml
.github/workflows/: rust.yml
src/: mailer.rs  main.rs
src/frontend/: mod.rs
src/user/: auth.rs  mod.rs  model.rs  schema.rs
templates/: activate.html.tera  base.html.tera  index.html.tera  requestResetPassword.html.tera  resetPassword.html.tera
templates/error/: generic_error.html.tera  specific_error.html.tera
templates_mail/: base.html.tera  createUser.html.tera  resetPassword.html.tera
