[package]
name = "webapp_boilerplate"
version = "0.1.0"
authors = ["Tim Serowski <info@timserowski.de>"]
edition = "2018"
description="A template for a RESTful JSON Backend using Rust, Rocket, diesel"
readme="README.md"
repository="https://github.com/tserowski/webapp_boilerplate"
homepage="https://github.com/tserowski/webapp_boilerplate"
license="Apache-2.0"
keywords=[]
categories=["authentication"]

[dependencies]
rocket = "0.4"
diesel = { version = "1", features = ["mysql", "r2d2"] }
rocket_codegen = "0.4"
serde = "1"
serde_derive = "1"
lettre = "0.9"
lettre_email = "0.9"
jwt = "0.10"
rust-crypto = "0.2"
rustc-serialize = "0.3"
bcrypt = "0.8"
config ="0.10"
rand = "0.7"
native-tls = "0.2"
base64 = "0.12"
sha2 = "0.9"
hmac = "0.8"
log = "0.4"
log4rs = "0.12"
rocket-multipart-form-data = "0.9"
mime = "0.3"
image = "0.23"
dotenv = "0.15"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json","mysql_pool","tera_templates","serve","diesel_mysql_pool"]